Added views. models, services for /api/tours/ endpoint: Tour and TourDay model, AllToursView, and GetAllToursService
